tetrate/TIS1106/e2e/des-resource.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: sample-destination-rule
  namespace: test
spec:
  host: "my-app-service.example-namespace.svc.cluster.local"
  subsets:
  - name: "v1"
    labels:
      version: "v1"
  - name: "v2"
    labels:
      version: "v2"
